# verified_string_matching

./: .travis.yml  README.md  stack.yaml  verified-string-matching.cabal
coq/: Match.v  Monoid.v  StringMatching.v  Tactics.v  locs
lib/: Parallelize.hs  Test.hs
lib/Proofs/: Equivalence.hs  Lists.hs
src/: AutoStringMatching.hs  ListProps.hs  Main.hs  StringMatching.hs
src/AutoProofs/: DistributeInput.hs  DistributeToSM.hs  ListLemmata.hs  ListMonoidLemmata.hs  MonoidAssoc.hs  MonoidEmptyLeft.hs  MonoidEmptyRight.hs  PmconcatEquivalence.hs  castConcat.hs  castShift.hs  catIndices.hs  concatMakeIndices.hs  makeIndicesNull.hs  makeNewIndicesNullLeft.hs  makeNewIndicesNullRight.hs  mapCastId.hs  mapLenFusion.hs  mapShiftZero.hs  mergeIndices.hs  shiftIndicesRight.hs  shiftNewIndices.hs  shiftNewIndicesLeft.hs  shiftNewIndicesRight.hs  toSMEmpty.hs
src/Data/List/: MList.hs  RList.hs
src/Data/Monoid/: PMonoid.hs
src/Data/RString/: Chunk.hs  RString.hs
src/Data/StringMatching/: StringIndexingMonoids.hs  StringMatching.hs
src/Language/Haskell/Liquid/: ProofCombinators.hs
src/Proofs/: CastLemmata.hs  DistributeInput.hs  DistributeInputList.hs  DistributeInputSM.hs  DistributeToSM.hs  EmptyLemmata.hs  ListLemmata.hs  ListMonoidLemmata.hs  MonoidAssoc.hs  MonoidEmptyLeft.hs  MonoidEmptyRight.hs  PmconcatEquivalence.hs  ShiftingLemmata.hs  castConcat.hs  castShift.hs  catIndices.hs  concatMakeIndices.hs  concatmakeIndices.hs  emptyIndices.hs  makeIndicesNull.hs  makeNewIndicesNullLeft.hs  makeNewIndicesNullRight.hs  mapCastId.hs  mapLenFusion.hs  mapShiftZero.hs  mergeIndices.hs  shiftIndicesRight.hs  shiftNewIndices.hs  shiftNewIndicesLeft.hs  shiftNewIndicesRight.hs  toSMEmpty.hs
src/tests/: Test.hs  big_out.csv  input.txt  the_out.csv  twoCore.txt  wilde-picture.txt
